<resources>
    <string name="app_name">On Route</string>
    <string name="F">TODO</string>
    <string name="G">TODO</string>
    <string name="I">TODO</string>
    <string name="B">TODO</string>
    <string name="H">TODO</string>
    <string name="J">TODO</string>
    <string name="L">TODO</string>
    <string name="R">TODO</string>
    <string name="Tank">TODO</string>
    <string name="g_nder">GÖNDER</string>
    <string name="on_route">On Route</string>
    <string name="baglan">BAĞLAN</string>
    <string name="todo">TODO</string>
</resources>