<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualActivity"
    android:weightSum="10"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">


        <ImageButton
            android:id="@+id/buton_ileri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_color"
            android:contentDescription="@string/F"
            android:rotation="270"
            app:layout_constraintEnd_toStartOf="@+id/buton_sag_ileri"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buton_sol_ileri"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/buton_sol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_color"
            android:contentDescription="@string/L"
            android:rotation="180"
            app:layout_constraintBottom_toTopOf="@+id/buton_sol_geri"
            app:layout_constraintEnd_toStartOf="@+id/imageTank"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buton_sol_ileri"
            app:srcCompat="@drawable/arrow"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/buton_sol_ileri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_color"
            android:contentDescription="@string/G"
            android:rotation="225"
            app:layout_constraintEnd_toStartOf="@+id/buton_ileri"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/buton_sol_geri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@drawable/button_bg_color"
            android:contentDescription="@string/H"
            android:rotation="135"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buton_geri"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/arrow"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/buton_geri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@drawable/button_bg_color"
            android:contentDescription="@string/B"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buton_sag_geri"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buton_sol_geri"
            app:srcCompat="@drawable/arrow"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/buton_sag_geri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_color"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/J"
            android:rotation="45"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buton_geri"
            app:srcCompat="@drawable/arrow"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/buton_sag_ileri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_color"
            android:contentDescription="@string/I"
            android:rotation="-45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buton_ileri"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/buton_sag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_color"
            android:contentDescription="@string/R"
            app:layout_constraintBottom_toTopOf="@+id/buton_sag_geri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageTank"
            app:layout_constraintTop_toBottomOf="@+id/buton_sag_ileri"
            app:srcCompat="@drawable/arrow"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageTank"
            android:layout_width="97dp"
            android:layout_height="116dp"
            android:contentDescription="@string/Tank"
            app:layout_constraintBottom_toTopOf="@+id/buton_geri"
            app:layout_constraintEnd_toStartOf="@+id/buton_sag"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buton_sol"
            app:layout_constraintTop_toBottomOf="@+id/buton_ileri"
            app:srcCompat="@drawable/tank" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="6dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/textTilt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Y: 10°"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tilt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pan" />

            <TextView
                android:id="@+id/textPan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="X: 10°"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/pan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/tilt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:max="170"
                android:progressDrawable="@drawable/seekbar_style"
                android:splitTrack="false"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTilt" />

            <SeekBar
                android:id="@+id/pan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="170"
                android:progressDrawable="@drawable/seekbar_style"
                android:splitTrack="false"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintBottom_toTopOf="@+id/textTilt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPan" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/butonRotaBaslat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="BAŞLAT"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/butonRotaCiz"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/butonRotaCiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="0dp"
                android:text="ROTA ÇİZ"
                android:textSize="20sp"        android:insetTop="0dp"
                android:insetBottom="0dp"
                app:layout_constraintEnd_toStartOf="@+id/butonRotaBaslat"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</LinearLayout>